--- a/Documentation/TechnicalManual.adoc
+++ b/Documentation/TechnicalManual.adoc
@@ -22,8 +22,6 @@ wkhtmltopdf -T 20 -B 20 TechnicalManual.html TechnicalManual.pdf
 ----
 ****
 
-== Architecture overview
-
 == The domain model explained
 
 === Basic entities
@@ -487,7 +485,7 @@ See <<Modifying source code inside transformations>> for more information.
 
 In this case, this transformation step specifically does the following:
 
-. Resolve class imports. This means that everytime, a class is imported with a `use` statement and then used with it's relative name somewhere in the code, this usage will simply be replaced with the fully-qualified class name.
+. Resolve class imports. This means that everytime, a class is imported with a `use` statement and then used with its relative name somewhere in the code, this usage will simply be replaced with the fully-qualified class name.
 +
 [cols="1a,1a"]
 |===
@@ -791,7 +789,7 @@ class Foo {
 |===
 +
 RewriteSingletonsVisitor::
-    This visitor affects all classes that implement the `TYPO3\CMS\Core\SingletonInterface` interface (or it's legacy variant `t3lib_Singleton`). The interface implementation will be removed, and a `@Flow\Scope("singleton")` annotation added to the class.
+    This visitor affects all classes that implement the `TYPO3\CMS\Core\SingletonInterface` interface (or its legacy variant `t3lib_Singleton`). The interface implementation will be removed, and a `@Flow\Scope("singleton")` annotation added to the class.
 
 ReplaceAnnotationsVisitor::
     This visitor replaces all Extbase annotations with their Flow equivalents; this is mostly search&replace (for example `@inject` becomes to `@Flow\Inject`). Some annotations require some more logic; for example `@validate StringLength(minLength=3)` needs to be converted to `@Flow\Validate(type="StringLength", options={"minLength"=3})`. Currently, these replacements are hardcoded in the `ReplaceAnnotationsVisitor` class. Have a look there for more information.
@@ -1103,19 +1101,19 @@ isAbstract::
 isFinal::
 	_True_ for final classes.
 isEntity::
-	Is _true_ when the class inherits from the `TYPO3\CMS\Extbase\DomainObject\AbstractEntity` class (or it's legacy variant `Tx_Extbase_DomainObject_AbstractEntity`). This is also true for transitive inheritance.
+	Is _true_ when the class inherits from the `TYPO3\CMS\Extbase\DomainObject\AbstractEntity` class (or its legacy variant `Tx_Extbase_DomainObject_AbstractEntity`). This is also true for transitive inheritance.
 isValueObject::
-	Same as `isEntity`, except for value objects (inheriting the `TYPO3\CMS\Extbase\DomainObject\AbstractValueObject` class or it's legacy variant).
+	Same as `isEntity`, except for value objects (inheriting the `TYPO3\CMS\Extbase\DomainObject\AbstractValueObject` class or its legacy variant).
 isEntityOrValueObject::
 	Should be self-explanatory.
 isSingleton::
-	Is _true_ when the class is marked as _singleton-scoped_. This is the case when the class or any of it's parent classes implement the `TYPO3\CMS\Core\SingletonInterface` or it's legacy variant `t3lib_Singleton`.
+	Is _true_ when the class is marked as _singleton-scoped_. This is the case when the class or any of its parent classes implement the `TYPO3\CMS\Core\SingletonInterface` or its legacy variant `t3lib_Singleton`.
 isPrototype::
 	Negation of `isSingleton`.
 isDirectEntityDescendant::
-	_True_ when the class directly inherits `TYPO3\CMS\Extbase\DomainObject\AbstractEntity` (or it's legacy variant).
+	_True_ when the class directly inherits `TYPO3\CMS\Extbase\DomainObject\AbstractEntity` (or its legacy variant).
 isDirectValueObjectDescendant::
-	_True_ when the class directly inherits `TYPO3\CMS\Extbase\DomainObject\AbstractValueObject` (or it's legacy variant).
+	_True_ when the class directly inherits `TYPO3\CMS\Extbase\DomainObject\AbstractValueObject` (or its legacy variant).
 isDirectEntityOrValueObjectDescendant::
 	Should be self-explanatory.
 
